fix overflow on home view

--- a/assets/style.css
+++ b/assets/style.css
@@ -55,10 +55,6 @@
 	color: #303030;
 }
 
-.readMore {
-	color: #AB1A25;
-}
-
 .explorePadding {
 	/*padding: 0px 10px 0px 10px;*/
 	text-align: center;
